# vrb

./: CMakeLists.txt  INSTALL  README  configure
vbuf/: CMakeLists.txt
vbuf/src/: vbuf.c
vrb/: CMakeLists.txt  pkg-config.pc.cmake
vrb/include/: vrb.h
